--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     window.onbeforeunload = function () {
       return "Dude, are you sure you want to leave? Think of the kittens!";
     };
-  </script>
+  </script> -->
 </html>
