--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://nothing.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Test website">
+    <meta property="og:description" content="This is the website description. Nice eh?">
+    <meta property="og:image" content="https://i.pinimg.com/originals/84/9b/63/849b636ec25a4f8badbf66acfff2d0c7.jpg">
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" /> -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
