--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/timgiasu.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://nothing.com">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Test website">
-    <meta property="og:description" content="This is the website description. Nice eh?">
-    <meta property="og:image" content="https://i.pinimg.com/originals/84/9b/63/849b636ec25a4f8badbf66acfff2d0c7.jpg">
+    
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" /> -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,25 +28,30 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Tìm gia sư</title>
+    <title>Tìm gia sư uy tín, miễn phí</title>
+    <meta name="description" content="Website tìm gia sư uy tín, miễn phí">
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Tìm gia sư">
+    <meta itemprop="description" content="Thuê gia sư hoặc trở thành gia sư hoàn toàn miễn phí">
+    <meta itemprop="image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlUamehSY7pgI7niCuucgI743EXcqYKLz7JY6dpVRgKIuQ2yvgJqeAy3Hw4A3GNX0dQ9g&usqp=CAU">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.findtutorapp.website/">
+    <meta property="og:type" content="Tìm gia sư">
+    <meta property="og:title" content="Tìm gia sư uy tín, miễn phí">
+    <meta property="og:description" content="Thuê gia sư hoặc trở thành gia sư hoàn toàn miễn phí">
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlUamehSY7pgI7niCuucgI743EXcqYKLz7JY6dpVRgKIuQ2yvgJqeAy3Hw4A3GNX0dQ9g&usqp=CAU">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="Tìm gia sư hoàn toàn miễn phí">
+    <meta name="twitter:title" content="Tìm gia sư">
+    <meta name="twitter:description" content="Thuê gia sư hoặc trở thành gia sư hoàn toàn miễn phí">
+    <meta name="twitter:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlUamehSY7pgI7niCuucgI743EXcqYKLz7JY6dpVRgKIuQ2yvgJqeAy3Hw4A3GNX0dQ9g&usqp=CAU">
   </head>
+  
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
-  <!-- <script type="text/javascript">
-    window.onbeforeunload = function () {
-      return "Dude, are you sure you want to leave? Think of the kittens!";
-    };
-  </script> -->
+  
 </html>
