--- a/public/index.html
+++ b/public/index.html
@@ -33,22 +33,22 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Tìm gia sư">
     <meta itemprop="description" content="Thuê gia sư hoặc trở thành gia sư hoàn toàn miễn phí">
-    <meta itemprop="image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlUamehSY7pgI7niCuucgI743EXcqYKLz7JY6dpVRgKIuQ2yvgJqeAy3Hw4A3GNX0dQ9g&usqp=CAU">
+    <meta itemprop="image" content="https://i.ibb.co/XV4VrC3/giasu.webp">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://www.findtutorapp.website/">
     <meta property="og:type" content="Tìm gia sư">
     <meta property="og:title" content="Tìm gia sư uy tín, miễn phí">
     <meta property="og:description" content="Thuê gia sư hoặc trở thành gia sư hoàn toàn miễn phí">
-    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlUamehSY7pgI7niCuucgI743EXcqYKLz7JY6dpVRgKIuQ2yvgJqeAy3Hw4A3GNX0dQ9g&usqp=CAU">
+    <meta property="og:image" content="https://i.ibb.co/XV4VrC3/giasu.webp">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="Tìm gia sư hoàn toàn miễn phí">
     <meta name="twitter:title" content="Tìm gia sư">
     <meta name="twitter:description" content="Thuê gia sư hoặc trở thành gia sư hoàn toàn miễn phí">
-    <meta name="twitter:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlUamehSY7pgI7niCuucgI743EXcqYKLz7JY6dpVRgKIuQ2yvgJqeAy3Hw4A3GNX0dQ9g&usqp=CAU">
+    <meta name="twitter:image" content="https://i.ibb.co/XV4VrC3/giasu.webp">
   </head>
-  
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
